# lab-kafka

./: Cargo.toml  docker-compose.yml
crates/chat-worker/: Cargo.toml
crates/game-server/: Cargo.toml
crates/game-server/src/: main.rs
crates/ranking-worker/: Cargo.toml
crates/replay-worker/: Cargo.toml
crates/shared/src/: lib.rs
